bug fix, when the action is invoked through search parties menu some parameters are not passed, and that was not foreseen